--- a/main/web/public/login/index.gohtml
+++ b/main/web/public/login/index.gohtml
@@ -7,14 +7,14 @@
 
     {{if not .LoggedIn}}
         <div id="login" class="container">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input v-model="email" type="email" class="form-control" id="email" aria-describedby="emailHelp">
+            <div class="form-floating mb-3">
+                <input v-model="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com" aria-describedby="emailHelp">
+                <label for="floatingInput">Email address</label>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input v-model="password" type="password" class="form-control" id="password">
+            <div class="mb-3 form-floating">
+                <input v-model="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
             </div>
             <div class="mb-3 d-flex justify-content-center">
                 <button @click="login()" class="btn btn-primary align-center">Submit</button>
@@ -49,25 +49,19 @@
                             })
                         }).then(response => response.json()).then(response => {
                             if (response.status == 200) {
-                                this.storeLoginCookie(response.token, 2)
+                                storeCookie("auth", response.token, 2)
                                 window.location.href = '/'
                             } else {
                                 alert('Invalid email or password')
                             }
                         })
                     },
-                    storeLoginCookie: function (token, days) {
-                        let d = new Date()
-                        d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000))
-                        let expires = "expires=" + d.toUTCString()
-                        document.cookie = "auth=" + token + ";" + expires + ";path=/"
-                    }
                 }
             })
         </script>
     {{else}}
-        <div class="px-4 py-3 my-5">
-            <div class=" mt-3 shadow rounded p-3 px-5 text-center">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <div style="width: fit-content" class="mt-5 shadow rounded py-3 px-5 text-center">
                 <div class="lead">You are already logged in!</div>
             </div>
         </div>
