--- a/main/web/public/register/index.gohtml
+++ b/main/web/public/register/index.gohtml
@@ -7,18 +7,18 @@
 
     {{if not .LoggedIn}}
         <div id="register" class="container">
-            <div class="mb-5">
-                <label for="email" class="form-label">Email address</label>
-                <input v-model="email" type="email" class="form-control" id="email" aria-describedby="emailHelp">
+            <div class="form-floating mb-3">
+                <input v-model="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com" aria-describedby="emailHelp">
+                <label for="floatingInput">Email address</label>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            <div class="mb-3">
-                <label for="password1" class="form-label">Password</label>
-                <input v-model="password1" type="password" class="form-control" id="password1">
+            <div class="mb-3 form-floating">
+                <input v-model="password1" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
             </div>
-            <div class="mb-3">
-                <label for="password2" class="form-label">Repeat Password</label>
-                <input v-model="password2" type="password" class="form-control" id="password2">
+            <div class="mb-3 form-floating">
+                <input v-model="password2" type="password" class="form-control" id="floatingPassword1" placeholder="Repeat Password">
+                <label for="floatingPassword1">Password</label>
             </div>
             <div class="mb-3">
                 <input v-model="invalidCheck" class="form-check-input" type="checkbox" id="invalidCheck" value="">
@@ -73,8 +73,8 @@
         </script>
 
     {{else}}
-        <div class="px-4 py-3 my-5">
-            <div class=" mt-3 shadow rounded p-6 px-5 text-center">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <div style="width: fit-content" class="mt-5 shadow rounded py-3 px-5 text-center">
                 <div class="lead">You are already logged in!</div>
             </div>
         </div>
