--- a/main/web/templates/_base.gohtml
+++ b/main/web/templates/_base.gohtml
@@ -14,10 +14,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
                 crossorigin="anonymous"></script>
+        <!-- Google Icons -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+              rel="stylesheet">
         <!-- Vue -->
         <script src="https://cdn.jsdelivr.net/npm/vue@2" crossorigin="anonymous"></script>
         <!-- App Script -->
-        <script src="/assets/script/app.js"></script>
+        <script src="/assets/script/baseScripts.js"></script>
+        <!-- App Style -->
+        <link href="/assets/style/colorMode.css" rel="stylesheet">
+        <link href="/assets/style/main.css" rel="stylesheet">
     </head>
     <body>
 {{end}}
@@ -43,19 +49,20 @@
 {{template "content" .}}
 
 {{define "botdoc"}}
-    <script>
-        document.addEventListener("visibilitychange", onchange);
+<script src="/assets/script/colorMode.js"></script>
+<script>
+    document.addEventListener("visibilitychange", onchange);
 
-        function onchange(evt) {
-            if (document.visibilityState === "visible") {
-                document.title = "{{template "title"}}";
-            } else {
-                document.title = "{{template "title"}} - 👋🏻 We miss you!";
-            }
+    function onchange(evt) {
+        if (document.visibilityState === "visible") {
+            document.title = "{{template "title"}}";
+        } else {
+            document.title = "{{template "title"}} - 👋🏻 We miss you!";
         }
-    </script>
-    </body>
-    </html>
+    }
+</script>
+</body>
+</html>
 {{end}}
 
 {{define "botdocsimple"}}
