work in progress banners
- work in progress banners
- work in progress tooltip

--- a/main/web/public/index.gohtml
+++ b/main/web/public/index.gohtml
@@ -1,4 +1,4 @@
-{{define "title"}}Yuki Sora{{end}}
+{{define "title"}}WeebsKingdom{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
@@ -15,7 +15,6 @@
             <p class="fs-1 me-3">👑</p>
             <h1 class="fw-bold text-body-emphasis">Weebs Kingdom</h1>
             <p class="fs-1 ms-3">👑</p>
-            <br>
         </div>
         <div class=" mt-3 shadow rounded p-3 px-5 text-center">
             <div class="lead">{{.RandomWelcomeMessage}}</div>
