--- a/main/web/public/register/index.gohtml
+++ b/main/web/public/register/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Register{{end}}
+{{define "featureDisabledDescription"}}Login and Registation{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
@@ -6,6 +7,7 @@
     {{template "navbar" .}}
 
     {{if not .LoggedIn}}
+        {{template "featureDisabled"}}
         <div id="register" class="container">
             <div class="form-floating mb-3">
                 <input v-model="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com" aria-describedby="emailHelp">
