--- a/main/web/public/website-terms/index.gohtml
+++ b/main/web/public/website-terms/index.gohtml
@@ -1,4 +1,4 @@
-{{define "title"}}Discord{{end}}
+{{define "title"}}Weebs Kingdom Terms and Conditions{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
