--- a/main/web/public/yukisora/index.gohtml
+++ b/main/web/public/yukisora/index.gohtml
@@ -1,4 +1,5 @@
 {{define "title"}}Yuki Sora{{end}}
+{{define "metaDescription"}}Yuki Sora - Our Discord Bot.{{end}}
 {{define "content"}}
     {{template "topdoc"}}
 
@@ -58,5 +59,6 @@
         </div>
     </div>
 
+    {{template "footer"}}
     {{template "botdoc"}}
 {{end}}
