--- a/main/web/templates/_base.gohtml
+++ b/main/web/templates/_base.gohtml
@@ -1,11 +1,17 @@
 {{define "title"}} Default Title {{end}}
+{{define "metaDescription"}}Default Description{{end}}
 
 {{define "topdoc"}}
     <html lang="de" data-bs-theme="dark">
     <head>
+        <!-- Meta Tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Meta Tags Links preview -->
+        <meta property="og:title" content="{{template "title"}}">
+        <meta property="og:description" content="{{template "metaDescription"}}">
+        <meta name="description" content="{{template "metaDescription"}}">
         <title>{{template "title"}}</title>
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -69,3 +75,4 @@
     </body>
     </html>
 {{end}}
+
