--- a/main/web/public/about/us/index.gohtml
+++ b/main/web/public/about/us/index.gohtml
@@ -41,7 +41,7 @@
                         connections with anime, manga, and gaming enthusiasts worldwide.
                     </li>
                     <li class="list-group-item d-flex align-items-center gap-2">
-                        <span class="material-icons">events</span> To create engaging events that foster camaraderie,
+                        <span class="material-icons">calendar_month</span> To create engaging events that foster camaraderie,
                         collaboration, and fun among our community members.
                     </li>
                     <li class="list-group-item d-flex align-items-center gap-2">
